bases/olympus/eos/essentials/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eos.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: eos.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eos-api
                port:
                  number: 80
  tls:
    - hosts:
        - eos.${cluster_name}.${cluster_location}.bink.sh
